--- a/js/public/index.html
+++ b/js/public/index.html
@@ -24,7 +24,7 @@
             <ins id="right" class="button"><span>RIGHT</span></ins>
         </div>
         <div class="display">
-            DMD
+            raspIR
         </div>
     </div>
     <script src="./js/jquery.min.js"></script>
