--- a/js/public/index.html
+++ b/js/public/index.html
@@ -14,14 +14,17 @@
             <ins id="info" class="button"><span>INFO</span></ins>
             <ins id="exit" class="button"><span>EXIT</span></ins>
             <ins id="volume-up" class="button blue"><span>Vol +</span></ins>
-            <ins id="ok" class="button ok"><span>OK</span></ins>
+            <ins id="tv" class="button tv"><span>TV</span></ins>
             <ins id="channel-up" class="button blue"><span>CH +</span></ins>
             <ins id="volume-down" class="button blue"><span>Vol -</span></ins>
-            <ins id="up" class="button"><span>UP</span></ins>
+            <ins id="up" class="button direction"><span>UP</span></ins>
             <ins id="channel-down" class="button blue"><span>CH -</span></ins>
-            <ins id="left" class="button"><span>LEFT</span></ins>
-            <ins id="down" class="button"><span>DOWN</span></ins>
-            <ins id="right" class="button"><span>RIGHT</span></ins>
+            <ins id="left" class="button direction"><span>LEFT</span></ins>
+            <ins id="ok" class="button ok"><span>OK</span></ins>
+            <ins id="right" class="button direction"><span>RIGHT</span></ins>
+            <ins id="down" class="button tv"><span>TV</span></ins>
+            <ins id="down" class="button direction"><span>DOWN</span></ins>
+            <ins id="down" class="button tv"><span>TV</span></ins>
         </div>
         <div class="display">
             raspIR
